# controllers/user.js
@@ -13,7 +13,7 @@ const getAll = async (req, res) => {
 
 const getSingle = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db().collection('user').find({ _id: userId });
+  const result = await mongodb.getDb().db().collection('UPS_store').find({ _id: userId });
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists[0]);
@@ -24,10 +24,9 @@ const createItem = async (req, res) => {
   const user = {
     emp_id: req.body.emp_id,
     firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    password: req.body.password
+    lastName: req.body.lastName
   };
-  const response = await mongodb.getDb().db().collection('UPS_store').insertOne(user);
+  const response = await mongodb.getDb().db().collection('user').insertOne(user);
   if (response.acknowledged) {
     console.log(response.acknowledged);
     res.status(201).json(response);
@@ -41,15 +40,9 @@ const updateItem = async (req, res) => {
   const user = {
     emp_id: req.body.emp_id,
     firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    password: req.body.password
+    lastName: req.body.lastName
   };
-  console.log(item);
-  const response = await mongodb
-    .getDb()
-    .db()
-    .collection('UPS_store')
-    .replaceOne({ _id: userId }, user);
+  const response = await mongodb.getDb().db().collection('user').replaceOne({ _id: userId }, user);
   console.log(response);
   if (response.modifiedCount > 0) {
     res.status(204).send();
